# module07/internal/infra/webserver/handlers/product_handlers.go
@@ -54,18 +54,17 @@ func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 
 }
 
-// List Products godoc
-// @Summary List Products
-// @Description List Products
+// Get Product godoc
+// @Summary Get Product
+// @Description Get Product
 // @Tags products
 // @Accept json
 // @Produce json
-// @Param  page 	query string  false "page number"
-// @Param  limit query string  false "limit"
+// @Param  id 	path string  true "product ID Format(uuid)"
 // @Success 200 {array} entity.Product
 // @Failure 404 {object} Error
 // @Failure 500 {object} Error
-// @Router /products [get]
+// @Router /products/{id} [get]
 // @Security ApiKeyAuth
 func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
@@ -83,6 +82,19 @@ func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(product)
 }
 
+// Update Product godoc
+// @Summary Update Product
+// @Description Update Product
+// @Tags products
+// @Accept json
+// @Produce json
+// @Param  id 	path string  true "product ID Format(uuid)"
+// @Param  request 	body dto.CreateProductInput  true "product request"
+// @Success 200
+// @Failure 404
+// @Failure 500
+// @Router /products/{id} [put]
+// @Security ApiKeyAuth
 func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 
@@ -113,6 +125,18 @@ func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 }
 
+// Delete Product godoc
+// @Summary Delete Product 
+// @Description Delete Product 
+// @Tags products
+// @Accept json
+// @Produce json
+// @Param  id 	path string  true "product ID Format(uuid)"
+// @Success 200
+// @Failure 404
+// @Failure 500 {object} Error
+// @Router /products/{id} [delete]
+// @Security ApiKeyAuth
 func (h *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 
@@ -133,6 +157,19 @@ func (h *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 }
 
+// List Products godoc
+// @Summary List Products
+// @Description List Products
+// @Tags products
+// @Accept json
+// @Produce json
+// @Param  page 	query string  false "page number"
+// @Param  limit query string  false "limit"
+// @Success 200 {array} entity.Product
+// @Failure 404 {object} Error
+// @Failure 500 {object} Error
+// @Router /products [get]
+// @Security ApiKeyAuth
 func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	page := r.URL.Query().Get("page")
 	limit := r.URL.Query().Get("limit")
